# fsgatewayclient

./: .gitreview  README.md  setup.cfg
fsgatewayclient/: .gitignore  __init__.py  auth_plugin.py  base.py  client.py  exceptions.py  i18n.py  shell.py  utils.py
fsgatewayclient/common/: _i18n.py  cliutils.py
fsgatewayclient/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
fsgatewayclient/v1_0/: __init__.py  associations.py  certs.py  client.py  shell.py  users.py  versions.py
