[metadata]
name = fsgatewayclient
version = 0.1
summary = Hybrid Cloud FusionSphere Gateway client
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fsgatewayclient

[install]
prefix=/
install-purelib=/usr/lib64/python2.6/site-packages/

[entry_points]
console_scripts =
    fsgateway = fsgatewayclient.shell:main

